<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marco.emergencyalert.MainActivity" >

    <TextView
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="left"
        android:singleLine="true"
        android:text="@string/temperature"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature" >
        
        <TextView
        android:id="@+id/now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/now"
        android:singleLine="true"
        android:textSize="24sp"
        android:textStyle="bold" />
        
         <TextView
        android:id="@+id/temperaturenow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/TU"
        android:singleLine="true"
        android:textSize="20sp"/>
       
       <ImageView
           android:id="@+id/temperaturealert"
           android:layout_width="42dp"
           android:layout_height="match_parent"
           android:layout_margin="6dp"
           android:layout_marginBottom="18dp"
           android:layout_marginRight="30px"
           android:src="@drawable/alert" />
    
    </LinearLayout>
    
    <TextView
        android:id="@+id/altitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_margin="10dp"
        android:gravity="left"
        android:singleLine="true"
        android:text="@string/altitude"
        android:textSize="28sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/altitude" >
       
        <TextView
        android:id="@+id/inpointfives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/inpointfives"
        android:singleLine="true"
        android:textSize="24sp"
        android:textStyle="bold" />
        
        <TextView
        android:id="@+id/altitudechanged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/AU"
        android:singleLine="true"
        android:textSize="20sp"/>
        
        <ImageView
           android:id="@+id/altitudealert"
           android:layout_width="42dp"
           android:layout_height="match_parent"
           android:layout_margin="6dp"
           android:layout_marginBottom="18dp"
           android:layout_marginRight="30px"
           android:src="@drawable/alert" />
   
    </LinearLayout>
       
       <TextView
        android:id="@+id/acceleration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_margin="10dp"
        android:gravity="left"
        android:singleLine="true"
        android:text="@string/acc"
        android:textSize="28sp"
        android:textStyle="bold" />
    
     <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acceleration" >
       <TextView
        android:id="@+id/acnow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/ac"
        android:singleLine="true"
        android:textSize="24sp"
        android:textStyle="bold" />
       <TextView
        android:id="@+id/accnow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:singleLine="true"
        android:maxLength="11"
        android:textSize="20sp"/>
      

         <ImageView
           android:id="@+id/accalert"
           android:layout_width="42dp"
           android:layout_height="match_parent"
           android:layout_margin="6dp"
           android:layout_marginBottom="18dp"
           android:layout_marginRight="30px"
           android:src="@drawable/alert" />
       
    </LinearLayout>
          
       <TextView
        android:id="@+id/gpsinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_margin="10dp"
        android:gravity="left"
        android:singleLine="true"
        android:text="@string/GPS"
        android:textSize="28sp"
        android:textStyle="bold" />
       <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gpsinfo" >
     <TextView
        android:id="@+id/Latitu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/latitu"
        android:singleLine="true"
        android:textSize="24sp"
        android:textStyle="bold" />
     <TextView
        android:id="@+id/Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:singleLine="true"
        android:text="@string/TU"
        android:maxLength="11"
        android:textSize="20sp"/>   
     </LinearLayout>
     <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4" >
      <TextView
        android:id="@+id/longitu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/longitu"
        android:singleLine="true"
        android:textSize="24sp"
        android:textStyle="bold" />
     <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/TU"
        android:singleLine="true"
        android:maxLength="11"
        android:textSize="20sp"/> 
     </LinearLayout>
      <ToggleButton 
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5"
        android:onClick="onToggleClick"
        android:textOff="Service and Send Message Disabled"
        android:textOn="Service and Send Message Enabled" />
</RelativeLayout>